--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 Match.user.passwordConfirmation=Password and Password Confirmation do not match
+Size.user.firstName=First name must contain at least 2 characters
+Size.user.lastName=Last name must contain at least 2 characters
 Size.user.password=Password must contain at least 5 characters
 Valid.user.email=Please enter a valid email address
