added song,lyric, and language repositories and validators

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,16 @@
 Match.user.passwordConfirmation=Password and Password Confirmation do not match
+
 Size.user.firstName=First name must contain at least 2 characters
 Size.user.lastName=Last name must contain at least 2 characters
 Size.user.password=Password must contain at least 5 characters
+
 Valid.user.email=Please enter a valid email address
+
+Size.song.title=Title must contain at least 2 characters
+Size.song.artist=Artist must contain at least 2 characters
+Size.song.createdBy=Created By must contain at least 2 characters
+
+Size.lyric.line=Lyric line must contain at least 2 characters
+
+Size.language.languageName=Language must contain at least 2 characters
+
